# allegro-snake

./: .gitignore  CMakeLists.txt  Vec2F.cpp  Vec2I.cpp  game.cpp  game.hpp  main.cpp  main.hpp  math.cpp  options.cpp  options.hpp  snake  snake.cpp  snake.hpp  test
src/: Vec2F.cpp  Vec2I.cpp  game.cpp  game.hpp  main.cpp  main.hpp  math.hpp  options.cpp  options.hpp  snake.cpp  snake.hpp
tests/: mathtest.cpp
